# markovian-musical-composition

./: API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  EXAMPLES.md  INSTALLATION.md  LICENSE  LICENSE.txt  QUICK_START.md  README.md  README_EN.md  STATUS.md  gitignore.txt  pyproject.toml  requirements-streamlit-cloud.txt  requirements-streamlit.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
src/: __init__.py  audioMarkov_gui_VFrame.py  markov_audio_streamlit.py  markov_audio_streamlit_cloud.py  script11_Markov_Audio1GeraCompMult_GUI.py
